jena-shex/src/test/files/spec/negativeSyntax/predicate-true.shex
# keyword true as predicate
# source: turtle-syntax-bad-kw-05.ttl
<http://a.example/IssueShape> {
   true .
}
